--- a/javascript/css.css
+++ b/javascript/css.css
@@ -16,3 +16,11 @@ form{
 label{
     width: 160px;
 }
+.claro{
+    background-color: #fff;
+    color: #000;
+}
+.escuro{
+    background-color: #000;
+    color: #fff;
+}
